css/replate.css
:root {
    --foreground1: #4e2670;
    --foreground-main: #f2d53c;
    --background1: #fceed1;
    --background-main: white;
}

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    max-width: 100%;
}

html {
    font-size: 62.5%;
}

a {
    text-decoration: none;
    font-size: 2rem;
}

body {
    color: var(--foreground-main);
    background-color: var(--background-main);
    font-size: 1.6rem;
    font-family: 'Work Sans', sans-serif;
}

.replate-logo {
    height: 7.5vh;
}

/* start header styling */

header {
    border-bottom: 1px solid var(--foreground1);
    color: var(--foreground1);
    background-color: var(--background1);
    margin-bottom: 1rem;
}

#header-nav-auth {
    padding: 1rem;
    border: 2px solid;
    border-radius: .5rem;
    align-self: flex-start;
}
/* end header styling */

/* start of footer styling */
footer{
    margin-top: 1rem;
    border-top: 1px solid var(--foreground1);
    color: var(--foreground1);
    background-color: var(--background1);
}

#right-footer a img {
    width: 2rem;
    align-self: flex-start;
    margin-left: 1rem;
}

.attribution {
    font-size: 1rem;
}
/* end of footer styling */

/* start combined header/footer styling */
.linkbox {
    display: flex;
    justify-content: space-between;
    height: 10vh;
    margin: 1rem;
}

.nav-left {
    display: flex;
}

.nav-home {
    padding: 1rem;
}

.nav-pages {
    display: flex;
    align-self: flex-end;
    margin-left: 10rem;
}

.nav-page {
    color: var(--foreground1);
    margin: 0 1rem;
}
/* end combined header/footer styling */

/* LocalWords:  meyers css
*/

